// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Mocks Mock of Accordion Component 1`] = `"label: Accordion"`;

exports[`Test Mocks Mock of Avatar Component 1`] = `"label: Sent"`;

exports[`Test Mocks Mock of Badge Component 1`] = `"value: testValue"`;

exports[`Test Mocks Mock of Breadcrumbs Component 1`] = `"crumbs: undefined"`;

exports[`Test Mocks Mock of Button Component 1`] = `"label: Button"`;

exports[`Test Mocks Mock of Checkbox Component 1`] = `"label: checkbox label"`;

exports[`Test Mocks Mock of Chip Component 1`] = `"label: example"`;

exports[`Test Mocks Mock of ChipInput Component 1`] = `"value: contactsTo"`;

exports[`Test Mocks Mock of Container Component 1`] = `
<ul>
  Container (orientation=vertical):
  <li>
    Text (size=small): Example Text 1
  </li>
  <li>
    Text (size=medium): Example Text 2
  </li>
  <li>
    Text (size=large): Example Text 3
  </li>
</ul>
`;

exports[`Test Mocks Mock of Divider Component 1`] = `"color: gray2"`;

exports[`Test Mocks Mock of Dropdown Component 1`] = `
<ul>
  Dropdown (items=[object Object],[object Object],[object Object]):
  <li>
    icon: ArrowDown
  </li>
  <li>
    icon: ArrowUp
  </li>
  <li>
    icon: ArrowLeft
  </li>
  <li>
    icon: ArrowRight
  </li>
</ul>
`;

exports[`Test Mocks Mock of EmailComposerInput Component 1`] = `"placeholder: Object"`;

exports[`Test Mocks Mock of FileLoader Component 1`] = `"onChange: unset"`;

exports[`Test Mocks Mock of Icon Component 1`] = `"size: small"`;

exports[`Test Mocks Mock of IconButton Component 1`] = `"icon: Pricetags"`;

exports[`Test Mocks Mock of IconCheckbox Component 1`] = `"icon: Text"`;

exports[`Test Mocks Mock of Input Component 1`] = `"label: Input"`;

exports[`Test Mocks Mock of Link Component 1`] = `"color: primary"`;

exports[`Test Mocks Mock of List Component 1`] = `"Factory: unset and amount: 2"`;

exports[`Test Mocks Mock of LoadMore Component 1`] = `"label: open"`;

exports[`Test Mocks Mock of Logo Component 1`] = `"size: small"`;

exports[`Test Mocks Mock of Padding Component 1`] = `"vertical: small"`;

exports[`Test Mocks Mock of Paragraph Component 1`] = `"overflow: break-word"`;

exports[`Test Mocks Mock of PasswordInput Component 1`] = `"label: PasswordInput"`;

exports[`Test Mocks Mock of Row Component 1`] = `"display: flex"`;

exports[`Test Mocks Mock of SearchInput Component 1`] = `"onChange: unset"`;

exports[`Test Mocks Mock of Select Component 1`] = `"label: Select an item"`;

exports[`Test Mocks Mock of Text Component 1`] = `"Text (size=small): Example Text"`;
